--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "twilio": "^4.23.0",
-    "typeorm": "^0.3.20"
+    "typeorm": "^0.3.20",
+    "typeorm-seeding": "^1.6.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
